--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "react-native-cardview",
+  "name": "react-native-alipay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
