--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "react-native-ali-pay",
+  "name": "react-native-zhifubao-zhifu",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
